<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="content_description_team_1_decrease">Decrease score for team 1</string>
    <string name="score_0">00</string>
    <string name="content_description_team_1_increase">Increase score for team 1</string>
    <string name="content_description_team_2_decrease">Decrease score for team 2</string>
    <string name="content_description_team_2_increase">Increase score for team 2</string>
</resources>
